<resources>
    <string name="app_name">HubSpot</string>

    <!-- Study buddy -->
    <string name="study_length">Study time length</string>
    <string name="break_length">Break time length</string>
    <string name="ask_share_location">Would you like to share your location with friends?</string>
    <string name="start_study_session">Start study session!</string>
    <string name="study_session_title">Stay focused!</string>
    <string name="break_session_title">Break time!</string>
    <string name="timer">Click to start</string>
    <string name="where_friends">Look where your friends are studying!</string>
    <string name="start_study_dialog_title">Let\'s continue studying!</string>
    <string name="start_break_dialog_title">Time for a break!</string>
    <string name="ask_continue">Would you like to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="end_session">End session</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="search_courses">Search Courses</string>
    <string name="load">Load</string>
    <string name="options_menu_item_log_out">Log out</string>
    <string name="turn_off_text">TURN OFF</string>
    <string name="turn_on_text">TURN ON</string>
    <string name="location_services_text">Location Services</string>
    <string name="turn_on_button_text">TURN ON</string>
    <string name="last_known_location_text">Last known location:</string>
    <string name="enroll">Enroll</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="emergency_info_text">When turned on, a user may press the volume \'Down\' button 5 times to automatically dial 911 in the case of an emergency.</string>
    <string name="emergency_services_switch_text">Emergency Services</string>

    <!-- Friends System -->
    <string name="your_secret_id">Your Secret ID:</string>
    <string name="share">Share</string>
    <string name="search_friends">Search Friends</string>
    <string name="enter_secret_id">Enter Secret ID</string>
    <string name="add_a_friend">Add a friend!</string>
    <string name="your_friends">Your friends</string>
    <string name="remove">Remove</string>

    <string name="options_menu_item_profile">Profile</string>
    <string name="course_info">Course Info</string>
    <string name="course_schedule">Course Schedule</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="instructor">Instructor</string>
    <string name="connect_to_the_internet_and_try_again">Connect to the internet and try again</string>
    <string name="error_no_internet_connection">Error - No internet connection</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rate_now">Rate Now!</string>
    <string name="name">Name:</string>
    <string name="department">Department:</string>
    <string name="occupation">Occupation:</string>
    <string name="email">Email:</string>
    <string name="area">Area:</string>
    <string name="professor_s_image">Professor\'s Image</string>
    <string name="enter_comment_here">Enter comment here...</string>
    <string name="review">Review:</string>
    <string name="comment">Comment:</string>
    <string name="unenroll">Un-enroll</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="description">Description</string>
    <string name="_3">3</string>
    <string name="credits">Credits:</string>
    <string name="raman_sehmbi">Raman Sehmbi</string>
    <string name="ping_location_toggle_text">When turned on, a user may long press (3 seconds) the volume \'Up\' button to send a push notification/ping to their friends.</string>
    <string name="friends_locations_label">Receive Friend\'s locations</string>
    <string name="friends_location_description">This feature is always on. It allows you to receive security \'Ping Location\' push notifications which outlines which friend is in need of safety and where they were at the time of the ping.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="schedule_fragment_title">Schedule</string>
    <string name="security_fragment_title">Security</string>
    <string name="study_buddy_fragment_title">Study Buddy</string>
    <string name="friends_fragment_title">Friends</string>
    <string name="ratings_fragment_title">Ratings</string>
    <string name="profile_activity_title">Profile</string>
    <string name="side_menu_item_logout_title">Log out</string>
    <string name="plan_my_schedule">Plan My Schedule</string>
    <string name="my_schedule">My Schedule</string>
    <string name="speech_to_text_description">When turned on, a user may long press (3 seconds) the volume \'Down\' button to record and save speech for later use.</string>
    <string name="speech_to_text_label">Speech-to-Text</string>
    <string name="latest_speech_text_view">Latest Speech</string>
    <string name="time_recorded_text_view">Time Recorded:</string>
    <string name="speech_text_text_view">Speech Text:</string>
    <string name="done_button_text">Done</string>

</resources>