<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".security.ui.SpeechActivity"
        android:orientation="vertical"
        android:layout_marginHorizontal="20sp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_speech_text_view"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/time_recorded_text_view"
            />
        <TextView
            android:id="@+id/speech_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speech_text_text_view"
            android:textAlignment="center"
            />
        <Button
            android:layout_marginTop="50sp"
            android:id="@+id/speech_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button_text"
            />

    </LinearLayout>
</ScrollView>