<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_services_text"
                android:layout_marginVertical="10dp"
                android:textSize="20dp"
                >
            </TextView>
            <Button
                android:id="@+id/location_services_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_button_text">
            </Button>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_known_location_text"
                android:layout_marginVertical="10dp"
                android:textSize="15dp"
                >
            </TextView>
            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                >
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="10sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20sp"
            >

            <Switch
                android:id="@+id/emergency_silent_button_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_services_switch_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@string/emergency_info_text'
                >
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10sp"
                />

            <Switch
                android:id="@+id/speech_to_text_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speech_to_text_label"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_to_text_description"
                >
            </TextView>
            <TextView
                android:id="@+id/saved_speech_button"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="See Last Saved Speech"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="20sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/design_default_color_error"
                >

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10sp"
                />

            <Switch
                android:id="@+id/ping_location_button_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ping Location to Friends"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@string/ping_location_toggle_text'
                >
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/black"
                android:text="@string/friends_locations_label"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10sp"
                android:text="@string/friends_location_description"
                >
            </TextView>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
